--- a/another/index.html
+++ b/another/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre la serie de Netflix Merlina, llena de misterio y aventuras.">
+    <meta name="description" content="Descubre la serie de Netflix Merlina, llena de misterio y aventura.">
     <link rel="canonical" href="https://example.com/merlina">
     <meta property="og:title" content="Merlina - Serie de Netflix">
-    <meta property="og:description" content="Explora el mundo de Merlina.">
-    <meta property="og:image" content="https://example.com/merlina.jpg">
+    <meta property="og:description" content="Sumérgete en el mundo de Merlina, donde la aventura y el misterio se entrelazan.">
+    <meta property="og:image" content="placeholder.jpg">
     <meta property="og:url" content="https://example.com/merlina">
     <title>Merlina - Serie de Netflix</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,73 +15,82 @@
   <link rel="stylesheet" href="styles.css" /></head>
 <body class="bg-gray-100">
     <header class="sticky top-0 bg-white shadow">
-        <nav class="flex justify-between items-center p-4">
-            <h1 class="text-xl font-bold">Merlina</h1>
-            <a href="#contact" class="bg-purple-600 text-white py-2 px-4 rounded">Contáctanos</a>
+        <nav class="container mx-auto flex justify-between items-center p-4">
+            <h1 class="text-2xl font-bold">Merlina</h1>
+            <a href="#contact" class="bg-purple-600 text-white px-4 py-2 rounded">Contáctanos</a>
         </nav>
     </header>
     <main>
-        <section class="hero text-white p-10 text-center">
-            <h2 class="text-4xl font-bold">¡Bienvenido a Merlina!</h2>
-            <p class="mt-4">Una serie llena de misterio y aventuras que no te puedes perder.</p>
+        <section class="hero text-white py-20 text-center">
+            <div class="container mx-auto">
+                <h2 class="text-5xl font-extrabold">Descubre el misterio</h2>
+                <p class="mt-4 text-lg">Una serie llena de aventuras y sorpresas en cada episodio.</p>
+            </div>
         </section>
-        <section class="p-6">
-            <h3 class="text-2xl font-semibold mb-4">Personajes</h3>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-bold">Merlina</h4>
-                    <p>La protagonista con un oscuro sentido del humor.</p>
+        <section class="py-10">
+            <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="card bg-white rounded-lg p-6 shadow">
+                    <h3 class="text-xl font-semibold">Personaje 1</h3>
+                    <p>Descripción breve del personaje 1.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-bold">Gómez</h4>
-                    <p>El padre amoroso y excéntrico.</p>
+                <div class="card bg-white rounded-lg p-6 shadow">
+                    <h3 class="text-xl font-semibold">Personaje 2</h3>
+                    <p>Descripción breve del personaje 2.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-bold">Morticia</h4>
-                    <p>La madre elegante y misteriosa.</p>
+                <div class="card bg-white rounded-lg p-6 shadow">
+                    <h3 class="text-xl font-semibold">Personaje 3</h3>
+                    <p>Descripción breve del personaje 3.</p>
                 </div>
             </div>
         </section>
-        <section class="bg-gray-200 p-6">
-            <h3 class="text-2xl font-semibold mb-4">Contáctanos</h3>
-            <form id="contact" class="bg-white rounded-lg p-6 shadow">
-                <label class="block mb-2" for="name">Nombre:</label>
-                <input class="w-full p-2 border rounded mb-4" type="text" id="name" name="name" required>
-                <label class="block mb-2" for="email">Correo Electrónico:</label>
-                <input class="w-full p-2 border rounded mb-4" type="email" id="email" name="email" required>
-                <label class="block mb-2" for="phone">Teléfono:</label>
-                <input class="w-full p-2 border rounded mb-4" type="tel" id="phone" name="phone">
-                <button type="submit" class="w-full bg-purple-600 text-white py-2 rounded">Enviar</button>
-            </form>
+        <section class="py-10 bg-gray-200">
+            <div class="container mx-auto">
+                <h2 class="text-3xl font-bold text-center">Contáctanos</h2>
+                <form id="contact" class="mt-6 max-w-md mx-auto bg-white p-6 rounded-lg shadow">
+                    <label for="name" class="block mb-2">Nombre:</label>
+                    <input type="text" id="name" class="w-full p-2 border rounded mb-4" required>
+                    <label for="email" class="block mb-2">Correo Electrónico:</label>
+                    <input type="email" id="email" class="w-full p-2 border rounded mb-4" required>
+                    <label for="phone" class="block mb-2">Teléfono:</label>
+                    <input type="tel" id="phone" class="w-full p-2 border rounded mb-4">
+                    <button type="submit" class="w-full bg-purple-600 text-white py-2 rounded">Enviar</button>
+                </form>
+            </div>
         </section>
-        <section class="p-6">
-            <h3 class="text-2xl font-semibold mb-4">Ubicación</h3>
-            <p>📍 Calle Falsa 123</p>
-            <p>📞 123-456-7890</p>
-            <p>🕰️ Lunes a Viernes: 9am - 5pm</p>
+        <section class="py-10">
+            <div class="container mx-auto">
+                <h2 class="text-3xl font-bold text-center">Ubicación</h2>
+                <p class="text-center">📍 Dirección: Calle Ficticia 123, Ciudad</p>
+                <p class="text-center">📞 Teléfono: (123) 456-7890</p>
+                <p class="text-center">🕰️ Horarios: Lunes a Viernes, 9 AM - 5 PM</p>
+            </div>
         </section>
-        <footer class="bg-gray-800 text-white p-6">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+        <footer class="bg-gray-800 text-white py-6">
+            <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
                 <div>
-                    <h4 class="font-bold">Merlina</h4>
-                    <p>La serie que te atrapará.</p>
+                    <h3 class="font-bold">Merlina</h3>
+                    <p>La serie que no te puedes perder.</p>
                 </div>
                 <div>
-                    <h4 class="font-bold">Información</h4>
+                    <h3 class="font-bold">Información</h3>
                     <ul>
-                        <li><a href="#" class="text-gray-400">Sobre nosotros</a></li>
-                        <li><a href="#" class="text-gray-400">Política de privacidad</a></li>
+                        <li><a href="#" class="hover:underline">Sobre nosotros</a></li>
+                        <li><a href="#" class="hover:underline">Términos</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold">Contacto</h4>
-                    <p>info@merlina.com</p>
+                    <h3 class="font-bold">Contacto</h3>
+                    <ul>
+                        <li><a href="#contact" class="hover:underline">Contáctanos</a></li>
+                    </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold">Redes Sociales</h4>
-                    <a href="#" class="text-gray-400">Facebook</a><br>
-                    <a href="#" class="text-gray-400">Twitter</a><br>
-                    <a href="#" class="text-gray-400">Instagram</a>
+                    <h3 class="font-bold">Redes Sociales</h3>
+                    <div class="flex space-x-4">
+                        <a href="#" aria-label="Facebook"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.35C0 23.4.6 24 1.325 24h21.35C23.4 24 24 23.4 24 22.675v-21.35C24 .6 23.4 0 22.675 0zm-3.45 12.15h-3.15v10.35H14.4V12.15h-2.85V9.9h2.85V8.25c0-2.8 1.65-4.35 4.1-4.35 1.15 0 2.15.1 2.45.15v2.85h-1.65c-1.3 0-1.55.6-1.55 1.55v2.1h3.15l-.45 2.25z"/></svg></a>
+                        <a href="#" aria-label="Twitter"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M23.953 4.57c-.885.392-1.83.656-2.825.775 1.014-.607 1.794-1.57 2.165-2.724-.951.56-2.005.973-3.127 1.19-.896-.956-2.173-1.55-3.594-1.55-2.717 0-4.923 2.206-4.923 4.923 0 .387.045.765.126 1.124-4.092-.205-7.72-2.165-10.148-5.144-.426.731-.666 1.577-.666 2.487 0 1.718.874 3.227 2.197 4.116-.81-.026-1.573-.248-2.24-.616v.062c0 2.401 1.707 4.405 3.975 4.86-.416.112-.854.171-1.303.171-.317 0-.624-.031-.93-.086.624 1.953 2.433 3.375 4.58 3.415-1.675 1.314-3.785 2.095-6.07 2.095-.394 0-.785-.023-1.17-.067 2.165 1.39 4.735 2.203 7.48 2.203 8.979 0 13.895-7.436 13.895-13.895 0-.211-.005-.422-.014-.632.952-.688 1.773-1.55 2.42-2.53z"/></svg></a>
+                        <a href="#" aria-label="Instagram"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm6 18.5c0 .828-.672 1.5-1.5 1.5H7.5C6.672 20 6 19.328 6 18.5V7.5C6 6.672 6.672 6 7.5 6h9c.828 0 1.5.672 1.5 1.5v10zm-6-12c-2.485 0-4.5 2.015-4.5 4.5S9.515 15.5 12 15.5 16.5 13.485 16.5 11 14.485 6.5 12 6.5zm0 7.5c-1.104 0-2-.896-2-2s.896-2 2-2 2 .896 2 2-.896 2-2 2zm3-7.5c-.828 0-1.5-.672-1.5-1.5S14.172 3.5 15 3.5s1.5.672 1.5 1.5S15.828 6.5 15 6.5z"/></svg></a>
+                    </div>
                 </div>
             </div>
         </footer>
