chore: add anotherone/index.html

--- a/anotherone/index.html
+++ b/anotherone/index.html
@@ -1,113 +1,139 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre la serie Merlina de Netflix, un emocionante viaje lleno de misterio y aventura.">
-    <link rel="canonical" href="https://example.com/merlina">
-    <meta property="og:title" content="Merlina - Netflix">
-    <meta property="og:description" content="Sumérgete en la intrigante historia de Merlina.">
-    <meta property="og:image" content="https://example.com/merlina.jpg">
-    <meta property="og:url" content="https://example.com/merlina">
-    <title>Merlina - Netflix</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Merlina - Landing Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 text-gray-800">
 
-<header class="sticky top-0 bg-white shadow">
-    <nav class="container mx-auto flex justify-between items-center p-4">
-        <h1 class="text-2xl font-bold">Merlina</h1>
-        <a href="#contact" class="bg-purple-600 text-white px-4 py-2 rounded">Contáctanos</a>
-    </nav>
-</header>
-
-<main>
-    <section class="hero text-white py-20 text-center">
-        <div class="container mx-auto">
-            <h2 class="text-5xl font-extrabold">Descubre el misterio de Merlina</h2>
-            <p class="mt-4 text-lg">Una serie llena de intriga y aventuras en la Academia Nevermore.</p>
+    <header class="bg-gradient-to-r from-indigo-600 to-purple-600 py-8">
+        <div class="container mx-auto text-center">
+            <h1 class="text-4xl font-bold text-white">Descubre Merlina</h1>
+            <p class="text-xl text-white mt-2">La serie que ha cautivado a todos</p>
+            <a href="#contact" class="mt-4 inline-block bg-white text-indigo-600 py-2 px-4 rounded shadow hover:bg-gray-200 transition">Contáctanos</a>
         </div>
-    </section>
+    </header>
 
-    <section class="container mx-auto py-10">
-        <h3 class="text-3xl font-bold text-center mb-6">Personajes</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="card bg-white rounded-lg shadow p-4">
-                <h4 class="font-semibold">Merlina Addams</h4>
-                <p>La protagonista, con un oscuro sentido del humor.</p>
+    <main class="container mx-auto my-8">
+        <section class="my-12">
+            <h2 class="text-3xl font-semibold text-center">Características</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
+                    <h3 class="font-bold">Característica 1</h3>
+                    <p>Descripción breve de la característica.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
+                    <h3 class="font-bold">Característica 2</h3>
+                    <p>Descripción breve de la característica.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
+                    <h3 class="font-bold">Característica 3</h3>
+                    <p>Descripción breve de la característica.</p>
+                </div>
             </div>
-            <div class="card bg-white rounded-lg shadow p-4">
-                <h4 class="font-semibold">Enid Sinclair</h4>
-                <p>La mejor amiga de Merlina, siempre lista para ayudar.</p>
+        </section>
+
+        <section class="my-12">
+            <h2 class="text-3xl font-semibold text-center">Personajes</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
+                    <h3 class="font-bold">Personaje 1</h3>
+                    <p>Descripción breve del personaje.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
+                    <h3 class="font-bold">Personaje 2</h3>
+                    <p>Descripción breve del personaje.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4 transition-transform">
+                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
+                    <h3 class="font-bold">Personaje 3</h3>
+                    <p>Descripción breve del personaje.</p>
+                </div>
             </div>
-            <div class="card bg-white rounded-lg shadow p-4">
-                <h4 class="font-semibold">Gomez Addams</h4>
-                <p>El carismático padre de Merlina.</p>
+        </section>
+
+        <section class="my-12">
+            <h2 class="text-3xl font-semibold text-center">Testimonios</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+                <div class="bg-white rounded-lg shadow p-4">
+                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
+                    <p>"Testimonio de un cliente satisfecho."</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4">
+                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
+                    <p>"Testimonio de un cliente satisfecho."</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4">
+                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
+                    <p>"Testimonio de un cliente satisfecho."</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="my-12">
+            <h2 class="text-3xl font-semibold text-center">Contáctanos</h2>
+            <form class="mt-6 max-w-lg mx-auto bg-white p-6 rounded-lg shadow">
+                <label class="block mb-2" for="name">Nombre:</label>
+                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="text" id="name" required>
+
+                <label class="block mb-2" for="email">Email:</label>
+                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="email" id="email" required>
+
+                <label class="block mb-2" for="message">Mensaje:</label>
+                <textarea class="w-full p-2 border border-gray-300 rounded mb-4" id="message" rows="4" required></textarea>
+
+                <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Enviar</button>
+            </form>
+        </section>
+
+        <section class="my-12">
+            <h2 class="text-3xl font-semibold text-center">Preguntas Frecuentes</h2>
+            <details class="mt-4">
+                <summary class="cursor-pointer">¿Cuál es la trama de Merlina?</summary>
+                <p class="mt-2">Breve descripción de la trama de Merlina.</p>
+            </details>
+            <details class="mt-4">
+                <summary class="cursor-pointer">¿Cuándo se estrena la próxima temporada?</summary>
+                <p class="mt-2">Información sobre la próxima temporada.</p>
+            </details>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div>
+                <h3 class="font-bold">Síguenos</h3>
+                <div class="flex space-x-4 mt-2">
+                    <a href="#" aria-label="Facebook" class="text-gray-400 hover:text-white">Facebook</a>
+                    <a href="#" aria-label="Twitter" class="text-gray-400 hover:text-white">Twitter</a>
+                    <a href="#" aria-label="Instagram" class="text-gray-400 hover:text-white">Instagram</a>
+                </div>
+            </div>
+            <div>
+                <h3 class="font-bold">Información</h3>
+                <ul>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Sobre nosotros</a></li>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Contacto</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="font-bold">Legal</h3>
+                <ul>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Política de privacidad</a></li>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Términos de servicio</a></li>
+                </ul>
             </div>
         </div>
-    </section>
-
-    <section class="container mx-auto py-10">
-        <h3 class="text-3xl font-bold text-center mb-6">Contáctanos</h3>
-        <form id="contact" class="bg-white rounded-lg shadow p-6">
-            <label for="name" class="block mb-2">Nombre:</label>
-            <input type="text" id="name" class="border rounded w-full p-2 mb-4" required>
-            <label for="email" class="block mb-2">Correo Electrónico:</label>
-            <input type="email" id="email" class="border rounded w-full p-2 mb-4" required>
-            <label for="phone" class="block mb-2">Teléfono:</label>
-            <input type="tel" id="phone" class="border rounded w-full p-2 mb-4">
-            <button type="submit" class="bg-purple-600 text-white px-4 py-2 rounded w-full">Enviar</button>
-        </form>
-    </section>
-
-    <section class="container mx-auto py-10">
-        <h3 class="text-3xl font-bold text-center mb-6">Ubicación</h3>
-        <div class="bg-white rounded-lg shadow p-4">
-            <p>📍 Dirección: Calle Ficticia 123, Ciudad</p>
-            <p>📞 Teléfono: (123) 456-7890</p>
-            <p>🕰️ Horarios: Lunes a Viernes, 10:00 - 18:00</p>
-        </div>
-    </section>
-
-    <section class="container mx-auto py-10">
-        <h3 class="text-3xl font-bold text-center mb-6">Redes Sociales</h3>
-        <div class="flex justify-center space-x-4">
-            <a href="https://facebook.com" class="text-blue-600">Facebook</a>
-            <a href="https://twitter.com" class="text-blue-400">Twitter</a>
-            <a href="https://instagram.com" class="text-pink-600">Instagram</a>
-        </div>
-    </section>
-</main>
-
-<footer class="bg-gray-800 text-white py-6">
-    <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-4">
-        <div>
-            <h4 class="font-bold">Merlina</h4>
-            <p>La serie que no te puedes perder.</p>
-        </div>
-        <div>
-            <h4 class="font-bold">Información</h4>
-            <ul>
-                <li><a href="#" class="text-gray-400">Sobre Nosotros</a></li>
-                <li><a href="#" class="text-gray-400">Términos</a></li>
-                <li><a href="#" class="text-gray-400">Política de Privacidad</a></li>
-            </ul>
-        </div>
-        <div>
-            <h4 class="font-bold">Contacto</h4>
-            <p>Email: contacto@merlina.com</p>
-        </div>
-        <div>
-            <h4 class="font-bold">Síguenos</h4>
-            <a href="https://facebook.com" class="text-gray-400">Facebook</a><br>
-            <a href="https://twitter.com" class="text-gray-400">Twitter</a><br>
-            <a href="https://instagram.com" class="text-gray-400">Instagram</a>
-        </div>
-    </div>
-</footer>
-
-
+    </footer>
 
 
   <!-- Chatwoot -->
