--- a/anotherone/index.html
+++ b/anotherone/index.html
@@ -1,137 +1,71 @@
 <!DOCTYPE html>
+```html
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merlina - Landing Page</title>
+    <title>anotherone</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100 text-gray-800">
+<body>
 
-    <header class="bg-gradient-to-r from-indigo-600 to-purple-600 py-8">
+    <section class="hero text-white py-20">
         <div class="container mx-auto text-center">
-            <h1 class="text-4xl font-bold text-white">Descubre Merlina</h1>
-            <p class="text-xl text-white mt-2">La serie que ha cautivado a todos</p>
-            <a href="#contact" class="mt-4 inline-block bg-white text-indigo-600 py-2 px-4 rounded shadow hover:bg-gray-200 transition">Contáctanos</a>
+            <h1 class="text-4xl font-bold mb-4">Merlina</h1>
+            <p class="mb-8">Descubre la emocionante serie de Netflix que ha capturado corazones.</p>
+            <img src="https://placehold.co/1200x600/4F46E5/FFFFFF?text=Merlina+Promo" alt="Promo de la serie Merlina" class="mx-auto rounded-lg shadow-lg">
         </div>
-    </header>
+    </section>
 
-    <main class="container mx-auto my-8">
-        <section class="my-12">
-            <h2 class="text-3xl font-semibold text-center">Características</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
-                    <h3 class="font-bold">Característica 1</h3>
-                    <p>Descripción breve de la característica.</p>
+    <section class="py-10">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-semibold mb-6">Personajes</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="card rounded-lg p-4 bg-white">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Personaje+1" alt="Personaje 1" class="rounded-full mx-auto mb-4">
+                    <h3 class="font-bold">Merlina</h3>
                 </div>
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
-                    <h3 class="font-bold">Característica 2</h3>
-                    <p>Descripción breve de la característica.</p>
+                <div class="card rounded-lg p-4 bg-white">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Personaje+2" alt="Personaje 2" class="rounded-full mx-auto mb-4">
+                    <h3 class="font-bold">Gólem</h3>
                 </div>
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Feature" alt="Característica" class="rounded mb-4">
-                    <h3 class="font-bold">Característica 3</h3>
-                    <p>Descripción breve de la característica.</p>
+                <div class="card rounded-lg p-4 bg-white">
+                    <img src="https://placehold.co/400x300/6366F1/FFFFFF?text=Personaje+3" alt="Personaje 3" class="rounded-full mx-auto mb-4">
+                    <h3 class="font-bold">Cyrus</h3>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="my-12">
-            <h2 class="text-3xl font-semibold text-center">Personajes</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
-                    <h3 class="font-bold">Personaje 1</h3>
-                    <p>Descripción breve del personaje.</p>
-                </div>
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
-                    <h3 class="font-bold">Personaje 2</h3>
-                    <p>Descripción breve del personaje.</p>
-                </div>
-                <div class="bg-white rounded-lg shadow p-4 transition-transform">
-                    <img src="https://placehold.co/300x200/8B5CF6/FFFFFF?text=Beneficio" alt="Personaje" class="rounded mb-4">
-                    <h3 class="font-bold">Personaje 3</h3>
-                    <p>Descripción breve del personaje.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="my-12">
-            <h2 class="text-3xl font-semibold text-center">Testimonios</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
-                <div class="bg-white rounded-lg shadow p-4">
-                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
-                    <p>"Testimonio de un cliente satisfecho."</p>
-                </div>
-                <div class="bg-white rounded-lg shadow p-4">
-                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
-                    <p>"Testimonio de un cliente satisfecho."</p>
-                </div>
-                <div class="bg-white rounded-lg shadow p-4">
-                    <img src="https://placehold.co/200x100/6B7280/FFFFFF?text=Client+Logo" alt="Logo Cliente" class="rounded mb-4">
-                    <p>"Testimonio de un cliente satisfecho."</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="my-12">
-            <h2 class="text-3xl font-semibold text-center">Contáctanos</h2>
-            <form class="mt-6 max-w-lg mx-auto bg-white p-6 rounded-lg shadow">
-                <label class="block mb-2" for="name">Nombre:</label>
-                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="text" id="name" required>
-
-                <label class="block mb-2" for="email">Email:</label>
-                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="email" id="email" required>
-
-                <label class="block mb-2" for="message">Mensaje:</label>
-                <textarea class="w-full p-2 border border-gray-300 rounded mb-4" id="message" rows="4" required></textarea>
-
-                <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Enviar</button>
+    <section class="py-10 bg-gray-100">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-semibold mb-6">Contáctanos</h2>
+            <form class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-lg">
+                <label class="block mb-4">
+                    <span class="text-gray-700">Nombre</span>
+                    <input type="text" class="mt-1 block w-full p-2 border rounded" placeholder="Tu nombre" required>
+                </label>
+                <label class="block mb-4">
+                    <span class="text-gray-700">Email</span>
+                    <input type="email" class="mt-1 block w-full p-2 border rounded" placeholder="Tu email" required>
+                </label>
+                <button type="submit" class="bg-indigo-600 text-white py-2 px-4 rounded hover:bg-indigo-700">Enviar</button>
             </form>
-        </section>
+        </div>
+    </section>
 
-        <section class="my-12">
-            <h2 class="text-3xl font-semibold text-center">Preguntas Frecuentes</h2>
-            <details class="mt-4">
-                <summary class="cursor-pointer">¿Cuál es la trama de Merlina?</summary>
-                <p class="mt-2">Breve descripción de la trama de Merlina.</p>
-            </details>
-            <details class="mt-4">
-                <summary class="cursor-pointer">¿Cuándo se estrena la próxima temporada?</summary>
-                <p class="mt-2">Información sobre la próxima temporada.</p>
-            </details>
-        </section>
-    </main>
-
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div>
-                <h3 class="font-bold">Síguenos</h3>
-                <div class="flex space-x-4 mt-2">
-                    <a href="#" aria-label="Facebook" class="text-gray-400 hover:text-white">Facebook</a>
-                    <a href="#" aria-label="Twitter" class="text-gray-400 hover:text-white">Twitter</a>
-                    <a href="#" aria-label="Instagram" class="text-gray-400 hover:text-white">Instagram</a>
-                </div>
+    <footer class="py-6 bg-gray-200 text-center">
+        <div class="container mx-auto">
+            <h3 class="text-lg font-semibold">Síguenos en redes sociales</h3>
+            <div class="flex justify-center space-x-4 mt-4">
+                <a href="#" class="text-blue-600">Facebook</a>
+                <a href="#" class="text-blue-400">Twitter</a>
+                <a href="#" class="text-pink-600">Instagram</a>
             </div>
-            <div>
-                <h3 class="font-bold">Información</h3>
-                <ul>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Sobre nosotros</a></li>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Contacto</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3 class="font-bold">Legal</h3>
-                <ul>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Política de privacidad</a></li>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Términos de servicio</a></li>
-                </ul>
-            </div>
+            <p class="mt-4">Ubicación: Netflix Headquarters, Los Gatos, California.</p>
         </div>
     </footer>
 
@@ -142,3 +76,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+```
